# roborep

./: .gitmodules  .ignores  README.md
3pi-serial-slave/: Makefile  slave.c
3pi_chassis/: picaxe_head.bas
3pi_chassis/find_power/: Makefile  test.c
3pi_chassis/serial-slave/: Makefile
Arobo/app/: app.fcgi  app.py  app_status.sh  streamer2.py
Arobo/camerad/: picamserver.py  picamserver_run.sh  picamserver_status.sh  run_picamserver.sh
Arobo/html/: app.js  camera.php  index.html  sensors.php  style.css
ROS/: roscore.sh  start.sh  status.sh
ROS/catkin_ws1/: c_back_a_little.sh  c_left_a_little.sh  c_stop.sh  c_walk.sh  gt_dist.sh  main.launch  make_bag.sh  mm2acer.yaml
ROS/catkin_ws1/src/raspicam_nd/: package.xml
ROS/catkin_ws1/src/raspicam_nd/src/: raspicam_nd.cpp
ROS/custom_src/raspicam_nd/: CMakeLists.txt  pi_camera.yaml  raspicam_nd.xml
ROS/custom_src/raspicam_nd/launch/: raspicam_nd.launch
ROS/custom_src/raspicam_nd/src/: raspicam_nd.cpp  readme
ROS/freenect/: stop.sh
ROS/mjpeg_server/: status.sh  stop.sh
ROS/opencv/: test.py  test_find_obj.py  view.sh
ROS/openni2/: status.sh  stop.sh
ROS/openni2_launch/: status.sh
ROS/sound_node/: add_more_voices.txt  status.sh
RobotarrLibs/: serial_cmd.cpp  serial_cmd.h  servo_x.cpp  servo_x.h
ard_esp32/: flash_mpython.sh  vars.sh  wifi_sta
ard_esp8266/: libraries  reset_cause.txt  urls.txt
ard_rpi2040/: picprobe.txt
ard_rpi2040/microros_test/: CMakeLists.txt  make.sh  micro_ros_raspberrypi_pico_sdk  pico_micro_ros_example.c  pico_nema_motors.c  ros_agent.sh  ros_echo.sh  ros_pub.sh  serial.sh  upload.gdb  upload_ros.sh  vars.sh  vars4agent.sh
ard_stm32/: set_udev.sh
baslib/: funclib.bas  tempvar.bas
bb/: bb_gpio_lib.py  char_lcd.py  char_lcd.txt  eye.py  funclib.bas  px1.bas  px2.bas  px3.bas  px_m.bas  px_main.bas  r5.bas  r5_motors.bas  redis_lcd.py  tftp_readme.txt  time2redis.py  time_lcd.py  time_lcd.sh
bio/: apoe3.sh  json2list.py  retrieve.py
bt4/: bluetoothctl.hlp  hm10_0_slave.help  hm10_1_master.help  hm10_control.py  hm10_control.sh  hm10_ibeacon.py  list.sh  readme.txt  run.sh  scan.sh  version.txt
calc/: cc.py
charger/: picaxe_beacon.bas
doc/: current_consumption.txt  ili9341_lcd_raspi.txt
esphome/: README
fchassis_test/: back.py  back.sh  back_turn_around.py  blobs.py  collect_data.py  collect_data.sh  collect_data_cp.py  collect_data_cp.sh  collect_dists.sh  colorfix.py  colorfix.sh  disparity.py  disparity.sh  dots2img.py  dots2img_inter.py  fchassis.py  ff_test.sh  find_dist.py  find_dist.sh  frun.py  fwd.py  fwd.sh  fwd_turn_around.py  fwd_turn_around.sh  go_around.py  go_around.sh  help_me.sh  left.py  left.sh  line.py  line.sh  mk_big_img.sh  move_around.py  move_around.sh  rect.py  rect.sh  redis_sens_stat.py  right.py  search_markers.py  search_markers.sh  (+17 more)
freecad/: GoPro_box_latch.FCStd  shower_handler_vtulka.FCStd  skalka_holder.FCStd  wire_hanger.FCStd
gcode/: bowl.ngc  box_with_cone.FCStd  circle.gcode  circle.ngc  circle.scad  hole.py  hole.sh  hole1.py  hole1.sh  hole_g.py  hole_g.sh  socket_inf.py  telnet2glbr.sh  telnet2grbl_debug.sh  test.py  test.sh
howto_send_email/: send_email.sh  send_file.sh
image_classification/: classification.py  classification.sh  db_find_same.py  db_find_same.sh  db_sorter.py  db_sorter.sh  find_same.py  find_same.sh  lib.py  make_file_list.py  make_file_list.sh  make_file_list_db.py  make_file_list_db.sh  run.sh
ino/: burn_bootloader.txt  cubieboard.txt  update_USBASP_firmware.txt
iot_server/: install_service.sh  iot_server.service  js_integrity_calc.sh  nginx.conf  run.sh  run_certbot.sh  server.py  test.sh
lib/: addresses.txt  current_values.py  dir.list  makedirlist.sh  startall.sh  stopall.sh  xbeeconf.py
models/: pymove.py
opcplus/: cam.sh
opencd/: README  debug.sh  openocd.sh  raspberrypi2-native.cfg  serial.sh  set_boot0_high_flash.py  set_boot0_low_run.py  telnet.sh  vars.sh
openscad/: 12v_power_socket_stand.scad  Container_v1_8_1g.scad  anim.sh  bb_anycube_lid.scad  bb_box_params.scad  calibration_cross.scad  dupont_shell_protection.scad  ependorf.scad  knurled_nut_holder.scad  knurled_nut_holder_modified.scad  leg.scad  mv2gal.sh  plate.scad  plate_complex.scad  plate_thin.scad  pole_d7mm.scad  serial.sh  uno_cnc_shield.scad  washer.scad  zatychka.scad
php_simple_uploader/: index.php
picaxe/: terminal.sh
printer3d/: Configuration.h  Configuration_adv.h
raspi_streamer/: kill.sh  motioneye.txt  reset_settings.sh  run.sh  start.py  status.sh  streamer.py  streamer.sh  streamer2.py  streamer2.sh  streamer3.py  streamer3.sh  test_streamer.sh  url  uwsgi.ini
scad_view/: data  index.php  phase.php  vars.php
scaremaster/: conf.json  cron_shoot.sh  motion_detect.py  scareserver.py  shoot.sh
scaremaster2/: run.sh
schematic/: power.txt  r5.bread
tank/: adctest.bas  ard.txt  rfcomm.sh  tank.bas  tank1.bas  tank2.bas  tank3.bas
tracks_i2c/: picaxe_head.bas  pins.h  track_chassis_i2c.pde
trunk/ROS/catkin_ws/src/oculus2wd/: CMakeLists.txt  image_signal_nd.xml  package.xml
trunk/ROS/catkin_ws/src/oculus2wd/launch/: brightness_nd.launch  colors.txt  display.launch  image_signal_nd.launch  img2www.launch  kill_all_nodes.sh  kill_camera_nodes.sh  minimal.launch  readme  robot_upstart_install.sh  robot_upstart_uninstall.sh
trunk/ROS/catkin_ws/src/oculus2wd/msg/: distance_sensor.msg  drive.msg
trunk/ROS/catkin_ws/src/oculus2wd/scripts/: brightness.py  imu_fft.py  imu_ir.py  imu_ir_twisted.py  lighthelp.py  powerhelp.py  talker.py
trunk/ROS/catkin_ws/src/oculus2wd/sphinx/: base.dic  base.lm
trunk/ROS/catkin_ws/src/oculus2wd/src/: distance_ranger.cpp  extract_line.cpp  image_signal.cpp  image_signal_nd.cpp  img2www.cpp  motion1.cpp  skin_detector.cpp  skin_detector.hpp
trunk/ROS/catkin_ws1/src/raspicam_nd/: CMakeLists.txt  package.xml
trunk/ROS/catkin_ws1/src/raspicam_nd/launch/: raspicam_nd.launch
trunk/ROS/catkin_ws1/src/raspicam_nd/src/: raspicam_nd.cpp
utils/: pypp.py  rename2exif.py  rename_video.py
webcam_lighttpd_proxy_setup/: 05-auth.conf.txt  10-proxy.conf.txt
(+3864 files in other folders)
